wip3: cleanup obsolete code